// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse <div><p></p></div> 1`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [],
      "children": Array [],
      "data": "",
      "end": 10,
      "name": "div",
      "selfClosing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "data": "",
  "end": 11,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parse match self closing in children 1`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [
        Object {
          "name": "data-toggle",
          "type": "Attribute",
          "value": "true",
        },
        Object {
          "name": "class",
          "type": "Attribute",
          "value": "hello",
        },
      ],
      "children": Array [
        Node {
          "attrs": Array [],
          "children": Array [],
          "data": "
    ",
          "end": 43,
          "name": "",
          "selfClosing": false,
          "start": 38,
          "type": "Text",
        },
        Node {
          "attrs": Array [],
          "children": Array [
            Node {
              "attrs": Array [],
              "children": Array [],
              "data": "Hello World",
              "end": 57,
              "name": "",
              "selfClosing": false,
              "start": 46,
              "type": "Text",
            },
          ],
          "data": "",
          "end": 60,
          "name": "p",
          "selfClosing": false,
          "start": 43,
          "type": "Element",
        },
        Node {
          "attrs": Array [
            Object {
              "name": "src",
              "type": "Attribute",
              "value": "self closing",
            },
          ],
          "children": Array [],
          "data": "",
          "end": 94,
          "name": "video",
          "selfClosing": true,
          "start": 66,
          "type": "Element",
        },
        Node {
          "attrs": Array [],
          "children": Array [],
          "data": "
  ",
          "end": 97,
          "name": "",
          "selfClosing": false,
          "start": 94,
          "type": "Text",
        },
      ],
      "data": "",
      "end": 102,
      "name": "div",
      "selfClosing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "data": "",
  "end": 106,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parse match self closing: self closing 1`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [],
      "children": Array [],
      "data": "",
      "end": 9,
      "name": "video",
      "selfClosing": true,
      "start": 0,
      "type": "Element",
    },
  ],
  "data": "",
  "end": 9,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parse match text <div class="class"><p>Hello World</p></div>: attribute 1`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [
        Object {
          "name": "class",
          "type": "Attribute",
          "value": "class",
        },
      ],
      "children": Array [
        Node {
          "attrs": Array [],
          "children": Array [
            Node {
              "attrs": Array [],
              "children": Array [],
              "data": "Hello World",
              "end": 33,
              "name": "",
              "selfClosing": false,
              "start": 22,
              "type": "Text",
            },
          ],
          "data": "",
          "end": 36,
          "name": "p",
          "selfClosing": false,
          "start": 19,
          "type": "Element",
        },
      ],
      "data": "",
      "end": 42,
      "name": "div",
      "selfClosing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "data": "",
  "end": 43,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parse match text <div><p>Hello World</p></div> 1`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [],
      "children": Array [
        Node {
          "attrs": Array [],
          "children": Array [
            Node {
              "attrs": Array [],
              "children": Array [],
              "data": "Hello World",
              "end": 19,
              "name": "",
              "selfClosing": false,
              "start": 8,
              "type": "Text",
            },
          ],
          "data": "",
          "end": 22,
          "name": "p",
          "selfClosing": false,
          "start": 5,
          "type": "Element",
        },
      ],
      "data": "",
      "end": 28,
      "name": "div",
      "selfClosing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "data": "",
  "end": 29,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parse pure text should be valid 1`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [],
      "children": Array [],
      "data": "Hello World",
      "end": 11,
      "name": "",
      "selfClosing": false,
      "start": 0,
      "type": "Text",
    },
  ],
  "data": "",
  "end": 11,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parse should parse each block with index 1`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [],
      "children": Array [],
      "data": Object {
        "condition": "name",
        "index": "i",
        "local": "n",
      },
      "end": 27,
      "name": "",
      "selfClosing": false,
      "start": 2,
      "type": "EachBlock",
    },
  ],
  "data": "",
  "end": 27,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parse should parse each block with index 2`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [],
      "children": Array [],
      "data": Object {
        "condition": "name",
        "index": "i",
        "local": "n",
      },
      "end": 26,
      "name": "",
      "selfClosing": false,
      "start": 2,
      "type": "EachBlock",
    },
  ],
  "data": "",
  "end": 26,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parse should parse each block without index 1`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [],
      "children": Array [
        Node {
          "attrs": Array [],
          "children": Array [],
          "data": "
",
          "end": 18,
          "name": "",
          "selfClosing": false,
          "start": 17,
          "type": "Text",
        },
        Node {
          "attrs": Array [],
          "children": Array [
            Node {
              "attrs": Array [],
              "children": Array [],
              "data": "Hello World ",
              "end": 33,
              "name": "",
              "selfClosing": false,
              "start": 21,
              "type": "Text",
            },
            Object {
              "end": 36,
              "name": "n",
              "start": 35,
              "type": "MustacheTag",
            },
          ],
          "data": "",
          "end": 39,
          "name": "p",
          "selfClosing": false,
          "start": 18,
          "type": "Element",
        },
      ],
      "data": Object {
        "condition": "name",
        "local": "n",
      },
      "end": 48,
      "name": "",
      "selfClosing": false,
      "start": 2,
      "type": "EachBlock",
    },
  ],
  "data": "",
  "end": 48,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parse should parse if block 1`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [],
      "children": Array [],
      "data": Object {
        "condition": "name",
      },
      "end": 16,
      "name": "",
      "selfClosing": false,
      "start": 2,
      "type": "IfBlock",
    },
  ],
  "data": "",
  "end": 16,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`parse should parse if block with children 1`] = `
Node {
  "attrs": Array [],
  "children": Array [
    Node {
      "attrs": Array [],
      "children": Array [
        Node {
          "attrs": Array [],
          "children": Array [],
          "data": "
",
          "end": 12,
          "name": "",
          "selfClosing": false,
          "start": 11,
          "type": "Text",
        },
        Node {
          "attrs": Array [],
          "children": Array [
            Node {
              "attrs": Array [],
              "children": Array [],
              "data": "Hello World",
              "end": 26,
              "name": "",
              "selfClosing": false,
              "start": 15,
              "type": "Text",
            },
          ],
          "data": "",
          "end": 29,
          "name": "p",
          "selfClosing": false,
          "start": 12,
          "type": "Element",
        },
        Node {
          "attrs": Array [],
          "children": Array [
            Node {
              "attrs": Array [],
              "children": Array [],
              "data": "Hello World",
              "end": 45,
              "name": "",
              "selfClosing": false,
              "start": 34,
              "type": "Text",
            },
          ],
          "data": "",
          "end": 48,
          "name": "p",
          "selfClosing": false,
          "start": 31,
          "type": "Element",
        },
      ],
      "data": Object {
        "condition": "name",
      },
      "end": 59,
      "name": "",
      "selfClosing": false,
      "start": 2,
      "type": "IfBlock",
    },
  ],
  "data": "",
  "end": 59,
  "name": "",
  "selfClosing": false,
  "start": 0,
  "type": "Fragment",
}
`;
